modules/k8s/env/k3s/minio/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio
      env: k3s
  template:
    metadata:
      labels:
        app: minio
        env: k3s
    spec:
      affinity: {}
      containers:
        - image: minio/minio
          imagePullPolicy: Always
          name: minio
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9001
          ports:
            - containerPort: 9000
              name: api
              protocol: TCP
            - containerPort: 9001
              name: console
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 128Mi
          volumeMounts:
            - mountPath: /data
              name: minio
      volumes:
        - name: minio
          persistentVolumeClaim:
            claimName: minio
        - name: vol-rzxxk
          persistentVolumeClaim:
            claimName: minio
