modules/k8s/env/k3s/minio/02-service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: minio
  labels:
    app: minio
    env: k3s
spec:
  ports:
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    env: k3s
  type: ClusterIP
