modules/k8s/env/k3s/minio/02-service-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
  labels:
    app: minio
    env: k3s
spec:
  ports:
    - name: console
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: minio
    env: k3s
  type: ClusterIP
