modules/k8s/env/k3s/minio/03-ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
spec:
  defaultBackend:
    service:
      name: minio
      port:
        number: 9001
  rules:
    - host: minio.domain.com
      http:
        paths:
          - backend:
              service:
                name: minio-console
                port:
                  number: 9001
            path: /
            pathType: Prefix
