modules/k8s/env/k3s/minio/03-ingress-s3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: minio
spec:
  defaultBackend:
    service:
      name: minio
      port:
        number: 9000
  rules:
    - host: s3.domain.com
      http:
        paths:
          - backend:
              service:
                name: minio-api
                port:
                  number: 9000
            path: /
            pathType: Prefix
